tests/error/linear_errors/variant_if_both_unused_reassign_field.err
Error: Drop violation (at $FILE:12:17)
   | 
10 | 
11 | @guppy
12 | def foo(b: bool, s: MyEnum @owned) -> MyEnum:
   |                  ^^^^^^^^^^^^^^^^ Variable `s` with non-droppable type `MyEnum` is leaked

Help: Make sure that `s` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
